--- a/midterm_2/pandas_seaborn/cars.ipynb
+++ b/midterm_2/pandas_seaborn/cars.ipynb
@@ -109,27 +109,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ec237ad3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "jjj = np.array([[1, 1, 1], [1, 1, 1], [1, 1, 1]])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "73d3ba93",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1680a1a6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0],\n",
+       "       [0, 1, 1, 1, 0],\n",
+       "       [0, 1, 1, 1, 0],\n",
+       "       [0, 1, 1, 1, 0],\n",
+       "       [0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.pad(jjj, (1, 1))"
+   ]
   },
   {
    "cell_type": "code",
